tests/transpiler/x/cpp/partial_application.cpp
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:20:14 GMT+7
#include <iostream>
#include <string>
#include <sstream>
#include <iomanip>


int add(int a, int b) {
    return (a + b);
}

auto add5 = add(5);

int main() {
    std::cout << std::boolalpha << add5(3) << std::endl;
    return 0;
}
